--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,21 @@
 {
-    "extends": "@antfu"
+    "extends": "@antfu",
+    "rules": {
+        "vue/attributes-order": ["error", {
+        "order": [
+          "DEFINITION",
+          "LIST_RENDERING",
+          "CONDITIONALS",
+          "RENDER_MODIFIERS",
+          "GLOBAL",
+          ["UNIQUE", "SLOT"],
+          "TWO_WAY_BINDING",
+          "OTHER_DIRECTIVES",
+          "OTHER_ATTR",
+          "EVENTS",
+          "CONTENT"
+        ],
+        "alphabetical": true
+      }]
+    }
 }
