--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@unocss/nuxt": "^0.45.13",
     "@unocss/preset-icons": "^0.45.13",
     "eslint": "^8.23.0",
+    "eslint-plugin-vue": "^9.4.0",
     "nuxt": "3.0.0-rc.8"
   },
   "dependencies": {
