--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "types": [ "@types/wicg-file-system-access"]
-   }
+  "extends": "./.nuxt/tsconfig.json"
 }
