--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@iconify-json/heroicons": "^1.1.3",
     "@unocss/nuxt": "^0.45.18",
     "@unocss/preset-icons": "^0.45.18",
+    "@vueuse/core": "^9.2.0",
+    "@vueuse/nuxt": "^9.2.0",
     "eslint": "^8.23.0",
     "eslint-plugin-vue": "^9.4.0",
     "nuxt": "3.0.0-rc.8"
