--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vueuse/nuxt": "^9.2.0",
     "eslint": "^8.23.0",
     "eslint-plugin-vue": "^9.4.0",
-    "nuxt": "3.0.0-rc.8"
+    "nuxt": "^3.0.0-rc.9"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
