--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.3",
     "@iconify-json/heroicons": "^1.1.3",
+    "@types/three": "^0.144.0",
     "@unocss/nuxt": "^0.45.18",
     "@unocss/preset-icons": "^0.45.18",
     "@vueuse/core": "^9.2.0",
@@ -22,6 +23,7 @@
     "@pinia/nuxt": "^0.4.2",
     "@unocss/reset": "^0.45.18",
     "pinia": "^2.0.22",
+    "three": "^0.144.0",
     "vue3-file-selector": "^1.0.3",
     "xmlbuilder2": "^3.0.2"
   }
