feat: further work

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.2",
     "@unocss/reset": "^0.45.18",
+    "canvg": "^4.0.1",
     "pinia": "^2.0.22",
     "three": "^0.144.0",
     "xmlbuilder2": "^3.0.2"
